<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digite_o_nome"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/nome"
            android:inputType='textPersonName' />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digite_o_sobrenome"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edtSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/last_name"
            android:hint="@string/sobrenome"
            android:inputType="textPersonName"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/digite_o_enderco"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edtEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Address"
            android:hint="@string/seu_endere_o"
            android:inputType="textPostalAddress"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="18sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Phone"
            android:hint="@string/_xx_xxxxx_xxxx"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/btnInsertNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inserir"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/dados"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>